src/components/collapse/collapse.scss
@import '../../utils/style/global.scss';

$animation-duration: 0.5s;

@mixin arrowRotation($deg) {
  transform: rotate($deg);
  transition: $animation-duration ease-in-out;
}

@mixin contentAnimation($anim) {
  position: relative;
  z-index: -1;
  background-color: #fbfbfb;
  border-radius: 5px;
  animation: $anim $animation-duration forwards;
}

.Collapse {
  max-width: 1023px;
  width: 90%;
  overflow: hidden;

  @media (max-width: 1024px) {
    width: 100%;
  }

  &__title {
    display: flex;
    justify-content: space-between;
    align-self: stretch;

    padding: 10px 20px 10px 10px;
    background-color: $primary-color;
    border-radius: 10px;

    @media (max-width: 768px) {
      padding: 0 10px;
      border-radius: 5px;
      height: 100%;
    }

    p {
      margin: 0;
      display: flex;
      flex-direction: column;
      justify-content: flex-end;

      font-size: 18px;
      font-weight: 700;
      color: $text-color;

      @media (max-width: 768px) {
        font-size: 13px;
        align-self: center;
      }
    }

    img {
      @include image-size(32px, 32px);
      cursor: pointer;
    }

    &.open {
      @include arrowRotation(-180deg);
    }
  }

  &__content {
    transform: translateY(-100%);
    max-height: 0px;
    opacity: 0;
    transition: all $animation-duration;

    &.open {
      @include contentAnimation(open);
      padding: 20px;
    }
  }
}

.alignSelf {
  align-self: center;
}

.listItem {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

@keyframes open {
  from {
    transform: translateY(-100%);
    opacity: 0;
    max-height: 0px;
  }
  to {
    transform: translateY(0);
    opacity: 1;
    max-height: 500px;
  }
}

